[package]
name = "yultsur"
version = "0.1.0"
edition = "2021"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
repository = "https://github.com/axic/yultsur"
homepage = "https://github.com/axic/yultsur"
license = "GPL-3.0"
readme = "README.md"
description = "Yultsur (or Yülçür) is a toolkit for Yul."
keywords = ["yul", "ethereum", "solidity"]

[dependencies]
pest = "^2.0"
pest_derive = "^2.0"
phf = { version = "0.11.1", features = ["macros"] }
